fix(filters): correct validation message styles
Related to CAM-3880

--- a/client/client/styles/_filters.less
+++ b/client/client/styles/_filters.less
@@ -72,15 +72,24 @@
   }
 
   .search-date {
-    display: table;
-    overflow: hidden;
-    .removable-input,
-    select {
-      display: table-cell;
+    > .wrapper {
+      display: table;
+      overflow: hidden;
+
+      .removable-input,
+      select {
+        display: table-cell;
+        vertical-align: top;
+      }
+
+      select {
+        width: 90px;
+        border-right: none;
+      }
     }
-    select {
-      width: 90px;
-      border-right: none;
+    .note-error {
+      display: block;
+      width: 100%;
     }
   }
 
