--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -1,11 +1,30 @@
 @import "_vars.less";
 @import "../../node_modules/camunda-commons-ui/resources/less/common";
+@import "../../node_modules/camunda-commons-ui/resources/less/_fonts";
 
 @import "./../node_modules/camunda-commons-ui/resources/less/directives/notifications-panel";
 @import "./../node_modules/camunda-commons-ui/resources/less/directives/pagination";
 @import "./../node_modules/camunda-commons-ui/lib/widgets/loader/cam-widget-loader";
 
 @import "pages/authorizations";
+
+
+h1,
+h2,
+h3,
+h4 {
+  .font-light;
+}
+
+h1 {
+  text-transform: uppercase;
+}
+
+
+label,
+strong {
+  .font-bold();
+}
 
 
 .page-header{
