chore(open sans): move the open sans font to commons UI
Related to CAM-3906

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -59,53 +59,8 @@
 // @import "_variables-override";
 
 
+@import "../../node_modules/camunda-commons-ui/resources/less/_fonts";
 
-@font-face {
-    font-family: 'open_sanslight';
-    src: url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.eot');
-    src: url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.woff') format('woff'),
-         url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.ttf') format('truetype'),
-         url('../fonts/opensans_light_macroman/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-.font-light {
-  font-family: 'open_sanslight', Helvetica, Arial, Verdana, sans-serif;
-  font-weight: normal;
-}
-
-
-@font-face {
-    font-family: 'open_sansregular';
-    src: url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.eot');
-    src: url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.woff') format('woff'),
-         url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/opensans_regular_macroman/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-.font-regular {
-  font-family: 'open_sansregular', Helvetica, Arial, Verdana, sans-serif;
-  font-weight: normal;
-}
-
-
-@font-face {
-    font-family: 'open_sansbold';
-    src: url('../fonts/opensans_bold_macroman/OpenSans-Bold-webfont.eot');
-    src: url('../fonts/opensans_bold_macroman/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/opensans_bold_macroman/OpenSans-Bold-webfont.woff') format('woff'),
-         url('../fonts/opensans_bold_macroman/OpenSans-Bold-webfont.ttf') format('truetype'),
-         url('../fonts/opensans_bold_macroman/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-.font-bold {
-  font-family: 'open_sansbold', Helvetica, Arial, Verdana, sans-serif;
-  font-weight: normal;
-}
 
 
 
