impr(styles): align login form styles
Related to CAM-3906

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -115,6 +115,7 @@
   @import "../../node_modules/camunda-commons-ui/node_modules/bootstrap/less/responsive-utilities";
 
 @import "../../node_modules/camunda-commons-ui/resources/less/common";
+@import "../../node_modules/camunda-commons-ui/lib/auth/page/login";
 @import "../../node_modules/camunda-commons-ui/lib/widgets/inline-field/cam-widget-inline-field";
 @import "../../node_modules/camunda-commons-ui/lib/widgets/search/cam-widget-search";
 
@@ -215,13 +216,6 @@ a:focus {
 
 
 
-.cam-auth-login {
-  max-width: 330px;
-  margin: auto;
-}
-
-
-
 @import "_mixins";
 
 @import "_layout";
@@ -264,6 +258,3 @@ a:focus {
 
 @import "../scripts/form/directives/cam-tasklist-form-generic";
 @import "../scripts/form/directives/cam-tasklist-form-external";
-
-
-
