impr(sidebar): correct padding of sidebar header
Related to CAM-3881

--- a/client/client/styles/pages/authorizations.less
+++ b/client/client/styles/pages/authorizations.less
@@ -48,6 +48,7 @@
     font-size: 1.25em;
 
     &.nav-header {
+      padding: (@grid-gutter-width / 4) (@grid-gutter-width / 2);
       &:before,
       &:after {
         display: none;
