impr(styles): stabilize the layout of authorizations
Related to CAM-3932

--- a/client/client/styles/pages/authorizations.less
+++ b/client/client/styles/pages/authorizations.less
@@ -12,8 +12,8 @@
   }
 
   &.resource-id {
-    min-width: 120px;
-    max-width: 180px;
+    min-width: 180px;
+    max-width: 220px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
@@ -30,7 +30,7 @@
   }
 
   &.action {
-    min-width: 90px;
+    min-width: 100px;
   }
 }
 
@@ -63,6 +63,9 @@
 
       &:hover {
         background: none;
+      }
+      &:focus {
+        outline: none;
       }
     }
 
