fix(authorizations): stabilize table layout
related to CAM-3932

--- a/client/client/styles/pages/authorizations.less
+++ b/client/client/styles/pages/authorizations.less
@@ -2,6 +2,7 @@
   &.authorization-type {
     min-width: 120px;
     max-width: 160px;
+    width: 120px;
     select {
       padding-left: 3px;
     }
@@ -11,9 +12,14 @@
     width: 180px;
   }
 
+  &.user {
+    width: 180px;
+  }
+
   &.resource-id {
-    min-width: 180px;
-    max-width: 220px;
+    min-width: 320px;
+    max-width: 350px;
+    width: 320px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
@@ -30,7 +36,7 @@
   }
 
   &.action {
-    min-width: 100px;
+    width: 120px;
   }
 }
 
