--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
@@ -6,6 +6,7 @@
       <th class="activity">Activity</th>
       <th class="type">Type</th>
       <th class="configuration">Configuration</th>
+      <th class="overriding-job-priority">Overriding Job Priority</th>
       <th class="action">Action</th>
     </tr>
   </thead>
@@ -32,6 +33,9 @@
       <td class="configuration">
         {{ jobDefinition.jobConfiguration }}
       </td>
+      <td class="overriding-job-priority">
+        {{ jobDefinition.overridingJobPriority }}
+      </td>
       <td class="action">
         <span ng-repeat="actionProvider in jobDefinitionActions">
           <view provider="actionProvider" vars="jobDefinitionVars"/>
@@ -40,14 +44,14 @@
     </tr>
 
     <tr ng-if="!jobDefinitions">
-      <td colspan="5">
+      <td colspan="6">
         <span class="glyphicon glyphicon-loading"></span>
         loading job definitions...
       </td>
     </tr>
 
     <tr ng-if="jobDefinitions && !jobDefinitions.length">
-      <td colspan="5">
+      <td colspan="6">
         No job definitions matched by current filter.
       </td>
     </tr>
